# escape_cabron

./: .cproject  .gitignore  .project  Makefile  Makefile.in  aclocal.m4  caca.pl  common.mk  config.h  config.status  configure  configure.ac  datos_caca.txt  libtool  quita_caca.pl  quita_caca.sh
Debug/: makefile
Debug/src/: escapecabron.d  subdir.mk
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
src/: .gitignore  Makefile  Makefile.am  Makefile.in  datos_caca.txt  escapecabron.c  escapecabron.h  escapecabron.lo  libescapecabron.la  main  main.c  main.c.tmp  main.exe.stackdump  main_completo.c  main_completo_original.c  main_sin_debug.c  tmp-found-libs
src/.deps/: escapecabron.Plo  main.Po
src/.libs/: libescapecabron.0.dylib  libescapecabron.dylib  libescapecabron.la  libescapecabron.lai  main
tests/: .gitignore  Makefile  Makefile.am  Makefile.in  check_escapecabron  check_escapecabron.c  check_escapecabron.h
tests/.deps/: check_escapecabron-check_escapecabron.Po
tests/.libs/: check_escapecabron
